// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default table row 1`] = `
<tr
  className="row"
>
  <TableCell
    key="NAME"
  >
    John Smith
  </TableCell>
  <TableCell
    key="ADDRESS"
  >
    123 Adams Drive
  </TableCell>
  <TableCell
    key="PHONE_NUMBER"
  >
    111-222-3333
  </TableCell>
</tr>
`;

exports[`should render a table row with row header 1`] = `
<tr
  className="row"
>
  <TableHeaderCell
    key="DESIGNATION"
    scope="row"
  >
    Manager
  </TableHeaderCell>
  <TableCell
    key="NAME"
  >
    John Smith
  </TableCell>
  <TableCell
    key="ADDRESS"
  >
    123 Adams Drive
  </TableCell>
  <TableCell
    key="PHONE_NUMBER"
  >
    111-222-3333
  </TableCell>
</tr>
`;
